[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.24.0"
serde = {"version" ="1.0.171", "features"=["derive"]}
serde_json = "1.0"
rand = "0.8.5"
destructure_traitobject = "0.2.0"
