[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.26.5"
serde = {"version" ="1.0.171", "features"=["derive"]}
serde_json = "1.0"
lock_api = "0.4.10"
crossbeam-utils = "0.8.16"
destructure_traitobject = "0.2.0"
hyper = "0.14.27"
