[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
futures-core = "0.3.28"
futures-util = "0.3.28"
serde = {"version" ="1.0.171", "features"=["derive"]}
serde_json = "1.0"
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-tungstenite = "0.20.0"
tungstenite = "0.20.1"
